--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ nav a:hover {
   text-align: left;
   outline: none;
   font-size: 15px;
+  margin-top: 10px;
 }
 .acativefaq,
 .faqQuestion:hover {
