--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ nav ul a:hover {
 /* Members Profile  */
 .member-profile {
   background-color: #e0f7f4;
+  padding: 1rem 0;
 }
 .card {
   margin-bottom: 2rem;
@@ -45,6 +46,86 @@ nav ul a:hover {
 .section-title {
   margin-bottom: 1rem;
 }
+
+/* --------------framwork help----------- */
+body {
+  background-color: #e0f7fa;
+  margin: 0;
+  padding: 0;
+}
+
+.members-Profile {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: center;
+}
+
+h2 {
+  margin-bottom: 20px;
+}
+
+.profile-list {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.profile-item {
+  background-color: white;
+  border: 1px solid #000000;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  width: 300px;
+  margin: 10px;
+  transition: transform 0.2s;
+}
+
+.profile-item:hover {
+  transform: scale(1.05);
+}
+
+.profile-item img {
+  width: 100%;
+  height: auto;
+  border-bottom: 1px solid #000000;
+}
+
+.profile-item h2 {
+  font-size: 1.5em;
+  margin: 10px 0;
+}
+
+.profile-item p {
+  padding: 0 10px 10px;
+}
+
+@media (max-width: 768px) {
+  .profile-list {
+      flex-direction: column;
+      align-items: center;
+  }
+
+  .profile-item {
+      width: 80%;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Fans Feedback  */
 .fans-feedback {
   background-color: #f8c8dc;
